--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="contenedor-lista">
 			<h1>Drag and Drop con Javascript</h1>
 
-			<div class="lista" id="lista">
+			<div class="lista" id="list">
 
 				<!-- ? Persona #1 -->
 				<div class="persona" data-id="1">
@@ -94,7 +94,7 @@
 		</div>
 	</div>
 
-	<script src="https://cdn.jsdelivr.net/npm/sortablejs@latest/Sortable.min.js"></script>
+	<script src="js/Sortable.min.js"></script>
 	<script src="js/main.js"></script>
 </body>
 </html>
